fixed spacing in classes

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,6 @@ img {
 
 .center {
     text-align: center;
-    display: inline-block;
 }
 
 
